--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,5 +1,5 @@
 <h1>Galleries</h1>
 
 <% @galleries.each do |gallery| %>
-    <a href="/<%= gallery %>"><%= gallery.capitalize %></a>
+    <a href="/<%= gallery.name %>"><%= gallery.name.capitalize %></a>
 <% end %>
