--- a/views/new_gallery.erb
+++ b/views/new_gallery.erb
@@ -6,7 +6,7 @@
   </div>
   <div>
     <label>Gallery Description</label>
-    <input type="text" name="gallery[description]" >
+    <input type="text" name="gallery[description]"/>
   </div>
   <input type="submit" value="Create Gallery"/>
 </form>
